tests/run/error_spawn_outside_nursery.out
tests/run/error_spawn_outside_nursery.ig:4:5: error: 'spawn' must appear inside a 'nursery' block
